[package]
name = "sonar"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { path = "logger" }
version = { path = "version" }
icmp = { path = "icmp" }
whois = { path = "whois" }
util = { path = "util" }

clap = { version = "4.5.35", features = [ "derive" ] }
ctrlc = "3.4.6"
colored = "3.0.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = [ "blocking" ]}
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-subscriber = "0.3.19"

[lints.clippy]
needless_return = "allow"